# movieapp

./: Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: node.yml
docker/python/: Dockerfile
server/: main.py
server/app/constants/: index.ts
server/app/database/migrations/: alembic.ini  env.py  set.py
server/app/database/migrations/versions/: a5e5f2a72fc9_create_users.py
server/app/handlers/: movie.py
server/app/models/: user.py
server/app/repositories/: tmdb.py
server/app/settings/: database.py  middleware.py
server/app/usecases/: user_usecase.py
src/: main.py
src/database/migrations/versions/: a5e5f2a72fc9_create_users.py
src/handlers/: movie.py  user.py
src/repositories/: tmdb.py
src/routers/: movie.py  sample.py
src/settings/: detabase.py  env.py
