[tool.poetry]
name = "voiceapp-server"
version = "0.1.0"
description = ""
authors = ["kei fujimoto <runa720.bump@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
